parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> bloque
Rule 2     bloque -> LBRACE decls instrs RBRACE
Rule 3     decls -> decls decl
Rule 4     decls -> empty
Rule 5     decl -> tipo ID SEMICOLON
Rule 6     tipo -> tipo LBRACKET NUM RBRACKET
Rule 7     tipo -> basico
Rule 8     basico -> INT
Rule 9     basico -> FLOAT
Rule 10    instrs -> instrs stmt
Rule 11    instrs -> empty
Rule 12    instr -> loc EQUALS bool SEMICOLON
Rule 13    instr -> IF LPAREN bool RPAREN instr
Rule 14    instr -> IF LPAREN bool RPAREN instr ELSE instr
Rule 15    instr -> WHILE LPAREN bool RPAREN instr
Rule 16    instr -> DO instr WHILE LPAREN bool RPAREN SEMICOLON
Rule 17    instr -> BREAK SEMICOLON
Rule 18    instr -> bloque
Rule 19    loc -> loc LBRACKET bool RBRACKET
Rule 20    loc -> ID
Rule 21    bool -> bool OR comb
Rule 22    bool -> comb
Rule 23    comb -> comb AND igualdad
Rule 24    comb -> igualdad
Rule 25    igualdad -> igualdad EQ rel
Rule 26    igualdad -> igualdad NE rel
Rule 27    igualdad -> rel
Rule 28    rel -> expr LT expr
Rule 29    rel -> expr LE expr
Rule 30    rel -> expr GE expr
Rule 31    rel -> expr GT expr
Rule 32    rel -> expr
Rule 33    expr -> expr PLUS term
Rule 34    expr -> expr MINUS term
Rule 35    expr -> term
Rule 36    term -> term TIMES unario
Rule 37    term -> term DIVIDE unario
Rule 38    term -> unario
Rule 39    unario -> NOT unario
Rule 40    unario -> MINUS unario
Rule 41    unario -> factor
Rule 42    factor -> LPAREN bool RPAREN
Rule 43    factor -> loc
Rule 44    factor -> NUM
Rule 45    factor -> REAL
Rule 46    factor -> TRUE
Rule 47    factor -> FALSE
Rule 48    stmt -> loc EQUALS bool SEMICOLON
Rule 49    stmt -> IF LPAREN bool RPAREN instr
Rule 50    stmt -> IF LPAREN bool RPAREN instr ELSE instr
Rule 51    stmt -> WHILE LPAREN bool RPAREN instr
Rule 52    stmt -> DO instr WHILE LPAREN bool RPAREN SEMICOLON
Rule 53    stmt -> BREAK SEMICOLON
Rule 54    stmt -> bloque
Rule 55    empty -> <empty>

Terminals, with rules where they appear

AND                  : 23
BREAK                : 17 53
DIVIDE               : 37
DO                   : 16 52
ELSE                 : 14 50
EQ                   : 25
EQUALS               : 12 48
FALSE                : 47
FLOAT                : 9
GE                   : 30
GT                   : 31
ID                   : 5 20
IF                   : 13 14 49 50
INT                  : 8
LBRACE               : 2
LBRACKET             : 6 19
LE                   : 29
LPAREN               : 13 14 15 16 42 49 50 51 52
LT                   : 28
MINUS                : 34 40
NE                   : 26
NOT                  : 39
NUM                  : 6 44
OR                   : 21
PLUS                 : 33
RBRACE               : 2
RBRACKET             : 6 19
REAL                 : 45
RPAREN               : 13 14 15 16 42 49 50 51 52
SEMICOLON            : 5 12 16 17 48 52 53
TIMES                : 36
TRUE                 : 46
WHILE                : 15 16 51 52
error                : 

Nonterminals, with rules where they appear

basico               : 7
bloque               : 1 18 54
bool                 : 12 13 14 15 16 19 21 42 48 49 50 51 52
comb                 : 21 22 23
decl                 : 3
decls                : 2 3
empty                : 4 11
expr                 : 28 28 29 29 30 30 31 31 32 33 34
factor               : 41
igualdad             : 23 24 25 26
instr                : 13 14 14 15 16 49 50 50 51 52
instrs               : 2 10
loc                  : 12 19 43 48
programa             : 0
rel                  : 25 26 27
stmt                 : 10
term                 : 33 34 35 36 37
tipo                 : 5 6
unario               : 36 37 38 39 40

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . bloque
    (2) bloque -> . LBRACE decls instrs RBRACE

    LBRACE          shift and go to state 3

    programa                       shift and go to state 1
    bloque                         shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> bloque .

    $end            reduce using rule 1 (programa -> bloque .)


state 3

    (2) bloque -> LBRACE . decls instrs RBRACE
    (3) decls -> . decls decl
    (4) decls -> . empty
    (55) empty -> .

    INT             reduce using rule 55 (empty -> .)
    FLOAT           reduce using rule 55 (empty -> .)
    RBRACE          reduce using rule 55 (empty -> .)
    IF              reduce using rule 55 (empty -> .)
    WHILE           reduce using rule 55 (empty -> .)
    DO              reduce using rule 55 (empty -> .)
    BREAK           reduce using rule 55 (empty -> .)
    ID              reduce using rule 55 (empty -> .)
    LBRACE          reduce using rule 55 (empty -> .)

    decls                          shift and go to state 4
    empty                          shift and go to state 5

state 4

    (2) bloque -> LBRACE decls . instrs RBRACE
    (3) decls -> decls . decl
    (10) instrs -> . instrs stmt
    (11) instrs -> . empty
    (5) decl -> . tipo ID SEMICOLON
    (55) empty -> .
    (6) tipo -> . tipo LBRACKET NUM RBRACKET
    (7) tipo -> . basico
    (8) basico -> . INT
    (9) basico -> . FLOAT

    RBRACE          reduce using rule 55 (empty -> .)
    IF              reduce using rule 55 (empty -> .)
    WHILE           reduce using rule 55 (empty -> .)
    DO              reduce using rule 55 (empty -> .)
    BREAK           reduce using rule 55 (empty -> .)
    ID              reduce using rule 55 (empty -> .)
    LBRACE          reduce using rule 55 (empty -> .)
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    instrs                         shift and go to state 6
    decl                           shift and go to state 7
    empty                          shift and go to state 8
    tipo                           shift and go to state 9
    basico                         shift and go to state 10

state 5

    (4) decls -> empty .

    INT             reduce using rule 4 (decls -> empty .)
    FLOAT           reduce using rule 4 (decls -> empty .)
    RBRACE          reduce using rule 4 (decls -> empty .)
    IF              reduce using rule 4 (decls -> empty .)
    WHILE           reduce using rule 4 (decls -> empty .)
    DO              reduce using rule 4 (decls -> empty .)
    BREAK           reduce using rule 4 (decls -> empty .)
    ID              reduce using rule 4 (decls -> empty .)
    LBRACE          reduce using rule 4 (decls -> empty .)


state 6

    (2) bloque -> LBRACE decls instrs . RBRACE
    (10) instrs -> instrs . stmt
    (48) stmt -> . loc EQUALS bool SEMICOLON
    (49) stmt -> . IF LPAREN bool RPAREN instr
    (50) stmt -> . IF LPAREN bool RPAREN instr ELSE instr
    (51) stmt -> . WHILE LPAREN bool RPAREN instr
    (52) stmt -> . DO instr WHILE LPAREN bool RPAREN SEMICOLON
    (53) stmt -> . BREAK SEMICOLON
    (54) stmt -> . bloque
    (19) loc -> . loc LBRACKET bool RBRACKET
    (20) loc -> . ID
    (2) bloque -> . LBRACE decls instrs RBRACE

    RBRACE          shift and go to state 13
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    BREAK           shift and go to state 19
    ID              shift and go to state 21
    LBRACE          shift and go to state 3

    stmt                           shift and go to state 14
    loc                            shift and go to state 15
    bloque                         shift and go to state 20

state 7

    (3) decls -> decls decl .

    INT             reduce using rule 3 (decls -> decls decl .)
    FLOAT           reduce using rule 3 (decls -> decls decl .)
    RBRACE          reduce using rule 3 (decls -> decls decl .)
    IF              reduce using rule 3 (decls -> decls decl .)
    WHILE           reduce using rule 3 (decls -> decls decl .)
    DO              reduce using rule 3 (decls -> decls decl .)
    BREAK           reduce using rule 3 (decls -> decls decl .)
    ID              reduce using rule 3 (decls -> decls decl .)
    LBRACE          reduce using rule 3 (decls -> decls decl .)


state 8

    (11) instrs -> empty .

    RBRACE          reduce using rule 11 (instrs -> empty .)
    IF              reduce using rule 11 (instrs -> empty .)
    WHILE           reduce using rule 11 (instrs -> empty .)
    DO              reduce using rule 11 (instrs -> empty .)
    BREAK           reduce using rule 11 (instrs -> empty .)
    ID              reduce using rule 11 (instrs -> empty .)
    LBRACE          reduce using rule 11 (instrs -> empty .)


state 9

    (5) decl -> tipo . ID SEMICOLON
    (6) tipo -> tipo . LBRACKET NUM RBRACKET

    ID              shift and go to state 22
    LBRACKET        shift and go to state 23


state 10

    (7) tipo -> basico .

    ID              reduce using rule 7 (tipo -> basico .)
    LBRACKET        reduce using rule 7 (tipo -> basico .)


state 11

    (8) basico -> INT .

    ID              reduce using rule 8 (basico -> INT .)
    LBRACKET        reduce using rule 8 (basico -> INT .)


state 12

    (9) basico -> FLOAT .

    ID              reduce using rule 9 (basico -> FLOAT .)
    LBRACKET        reduce using rule 9 (basico -> FLOAT .)


state 13

    (2) bloque -> LBRACE decls instrs RBRACE .

    $end            reduce using rule 2 (bloque -> LBRACE decls instrs RBRACE .)
    RBRACE          reduce using rule 2 (bloque -> LBRACE decls instrs RBRACE .)
    IF              reduce using rule 2 (bloque -> LBRACE decls instrs RBRACE .)
    WHILE           reduce using rule 2 (bloque -> LBRACE decls instrs RBRACE .)
    DO              reduce using rule 2 (bloque -> LBRACE decls instrs RBRACE .)
    BREAK           reduce using rule 2 (bloque -> LBRACE decls instrs RBRACE .)
    ID              reduce using rule 2 (bloque -> LBRACE decls instrs RBRACE .)
    LBRACE          reduce using rule 2 (bloque -> LBRACE decls instrs RBRACE .)
    ELSE            reduce using rule 2 (bloque -> LBRACE decls instrs RBRACE .)


state 14

    (10) instrs -> instrs stmt .

    RBRACE          reduce using rule 10 (instrs -> instrs stmt .)
    IF              reduce using rule 10 (instrs -> instrs stmt .)
    WHILE           reduce using rule 10 (instrs -> instrs stmt .)
    DO              reduce using rule 10 (instrs -> instrs stmt .)
    BREAK           reduce using rule 10 (instrs -> instrs stmt .)
    ID              reduce using rule 10 (instrs -> instrs stmt .)
    LBRACE          reduce using rule 10 (instrs -> instrs stmt .)


state 15

    (48) stmt -> loc . EQUALS bool SEMICOLON
    (19) loc -> loc . LBRACKET bool RBRACKET

    EQUALS          shift and go to state 24
    LBRACKET        shift and go to state 25


state 16

    (49) stmt -> IF . LPAREN bool RPAREN instr
    (50) stmt -> IF . LPAREN bool RPAREN instr ELSE instr

    LPAREN          shift and go to state 26


state 17

    (51) stmt -> WHILE . LPAREN bool RPAREN instr

    LPAREN          shift and go to state 27


state 18

    (52) stmt -> DO . instr WHILE LPAREN bool RPAREN SEMICOLON
    (12) instr -> . loc EQUALS bool SEMICOLON
    (13) instr -> . IF LPAREN bool RPAREN instr
    (14) instr -> . IF LPAREN bool RPAREN instr ELSE instr
    (15) instr -> . WHILE LPAREN bool RPAREN instr
    (16) instr -> . DO instr WHILE LPAREN bool RPAREN SEMICOLON
    (17) instr -> . BREAK SEMICOLON
    (18) instr -> . bloque
    (19) loc -> . loc LBRACKET bool RBRACKET
    (20) loc -> . ID
    (2) bloque -> . LBRACE decls instrs RBRACE

    IF              shift and go to state 32
    WHILE           shift and go to state 30
    DO              shift and go to state 28
    BREAK           shift and go to state 33
    ID              shift and go to state 21
    LBRACE          shift and go to state 3

    instr                          shift and go to state 29
    loc                            shift and go to state 31
    bloque                         shift and go to state 34

state 19

    (53) stmt -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 35


state 20

    (54) stmt -> bloque .

    RBRACE          reduce using rule 54 (stmt -> bloque .)
    IF              reduce using rule 54 (stmt -> bloque .)
    WHILE           reduce using rule 54 (stmt -> bloque .)
    DO              reduce using rule 54 (stmt -> bloque .)
    BREAK           reduce using rule 54 (stmt -> bloque .)
    ID              reduce using rule 54 (stmt -> bloque .)
    LBRACE          reduce using rule 54 (stmt -> bloque .)


state 21

    (20) loc -> ID .

    EQUALS          reduce using rule 20 (loc -> ID .)
    LBRACKET        reduce using rule 20 (loc -> ID .)
    TIMES           reduce using rule 20 (loc -> ID .)
    DIVIDE          reduce using rule 20 (loc -> ID .)
    LT              reduce using rule 20 (loc -> ID .)
    LE              reduce using rule 20 (loc -> ID .)
    GE              reduce using rule 20 (loc -> ID .)
    GT              reduce using rule 20 (loc -> ID .)
    PLUS            reduce using rule 20 (loc -> ID .)
    MINUS           reduce using rule 20 (loc -> ID .)
    EQ              reduce using rule 20 (loc -> ID .)
    NE              reduce using rule 20 (loc -> ID .)
    AND             reduce using rule 20 (loc -> ID .)
    SEMICOLON       reduce using rule 20 (loc -> ID .)
    OR              reduce using rule 20 (loc -> ID .)
    RBRACKET        reduce using rule 20 (loc -> ID .)
    RPAREN          reduce using rule 20 (loc -> ID .)


state 22

    (5) decl -> tipo ID . SEMICOLON

    SEMICOLON       shift and go to state 36


state 23

    (6) tipo -> tipo LBRACKET . NUM RBRACKET

    NUM             shift and go to state 37


state 24

    (48) stmt -> loc EQUALS . bool SEMICOLON
    (21) bool -> . bool OR comb
    (22) bool -> . comb
    (23) comb -> . comb AND igualdad
    (24) comb -> . igualdad
    (25) igualdad -> . igualdad EQ rel
    (26) igualdad -> . igualdad NE rel
    (27) igualdad -> . rel
    (28) rel -> . expr LT expr
    (29) rel -> . expr LE expr
    (30) rel -> . expr GE expr
    (31) rel -> . expr GT expr
    (32) rel -> . expr
    (33) expr -> . expr PLUS term
    (34) expr -> . expr MINUS term
    (35) expr -> . term
    (36) term -> . term TIMES unario
    (37) term -> . term DIVIDE unario
    (38) term -> . unario
    (39) unario -> . NOT unario
    (40) unario -> . MINUS unario
    (41) unario -> . factor
    (42) factor -> . LPAREN bool RPAREN
    (43) factor -> . loc
    (44) factor -> . NUM
    (45) factor -> . REAL
    (46) factor -> . TRUE
    (47) factor -> . FALSE
    (19) loc -> . loc LBRACKET bool RBRACKET
    (20) loc -> . ID

    NOT             shift and go to state 47
    MINUS           shift and go to state 45
    LPAREN          shift and go to state 49
    NUM             shift and go to state 50
    REAL            shift and go to state 51
    TRUE            shift and go to state 52
    FALSE           shift and go to state 53
    ID              shift and go to state 21

    loc                            shift and go to state 38
    bool                           shift and go to state 39
    comb                           shift and go to state 40
    igualdad                       shift and go to state 41
    rel                            shift and go to state 42
    expr                           shift and go to state 43
    term                           shift and go to state 44
    unario                         shift and go to state 46
    factor                         shift and go to state 48

state 25

    (19) loc -> loc LBRACKET . bool RBRACKET
    (21) bool -> . bool OR comb
    (22) bool -> . comb
    (23) comb -> . comb AND igualdad
    (24) comb -> . igualdad
    (25) igualdad -> . igualdad EQ rel
    (26) igualdad -> . igualdad NE rel
    (27) igualdad -> . rel
    (28) rel -> . expr LT expr
    (29) rel -> . expr LE expr
    (30) rel -> . expr GE expr
    (31) rel -> . expr GT expr
    (32) rel -> . expr
    (33) expr -> . expr PLUS term
    (34) expr -> . expr MINUS term
    (35) expr -> . term
    (36) term -> . term TIMES unario
    (37) term -> . term DIVIDE unario
    (38) term -> . unario
    (39) unario -> . NOT unario
    (40) unario -> . MINUS unario
    (41) unario -> . factor
    (42) factor -> . LPAREN bool RPAREN
    (43) factor -> . loc
    (44) factor -> . NUM
    (45) factor -> . REAL
    (46) factor -> . TRUE
    (47) factor -> . FALSE
    (19) loc -> . loc LBRACKET bool RBRACKET
    (20) loc -> . ID

    NOT             shift and go to state 47
    MINUS           shift and go to state 45
    LPAREN          shift and go to state 49
    NUM             shift and go to state 50
    REAL            shift and go to state 51
    TRUE            shift and go to state 52
    FALSE           shift and go to state 53
    ID              shift and go to state 21

    loc                            shift and go to state 38
    bool                           shift and go to state 54
    comb                           shift and go to state 40
    igualdad                       shift and go to state 41
    rel                            shift and go to state 42
    expr                           shift and go to state 43
    term                           shift and go to state 44
    unario                         shift and go to state 46
    factor                         shift and go to state 48

state 26

    (49) stmt -> IF LPAREN . bool RPAREN instr
    (50) stmt -> IF LPAREN . bool RPAREN instr ELSE instr
    (21) bool -> . bool OR comb
    (22) bool -> . comb
    (23) comb -> . comb AND igualdad
    (24) comb -> . igualdad
    (25) igualdad -> . igualdad EQ rel
    (26) igualdad -> . igualdad NE rel
    (27) igualdad -> . rel
    (28) rel -> . expr LT expr
    (29) rel -> . expr LE expr
    (30) rel -> . expr GE expr
    (31) rel -> . expr GT expr
    (32) rel -> . expr
    (33) expr -> . expr PLUS term
    (34) expr -> . expr MINUS term
    (35) expr -> . term
    (36) term -> . term TIMES unario
    (37) term -> . term DIVIDE unario
    (38) term -> . unario
    (39) unario -> . NOT unario
    (40) unario -> . MINUS unario
    (41) unario -> . factor
    (42) factor -> . LPAREN bool RPAREN
    (43) factor -> . loc
    (44) factor -> . NUM
    (45) factor -> . REAL
    (46) factor -> . TRUE
    (47) factor -> . FALSE
    (19) loc -> . loc LBRACKET bool RBRACKET
    (20) loc -> . ID

    NOT             shift and go to state 47
    MINUS           shift and go to state 45
    LPAREN          shift and go to state 49
    NUM             shift and go to state 50
    REAL            shift and go to state 51
    TRUE            shift and go to state 52
    FALSE           shift and go to state 53
    ID              shift and go to state 21

    bool                           shift and go to state 55
    comb                           shift and go to state 40
    igualdad                       shift and go to state 41
    rel                            shift and go to state 42
    expr                           shift and go to state 43
    term                           shift and go to state 44
    unario                         shift and go to state 46
    factor                         shift and go to state 48
    loc                            shift and go to state 38

state 27

    (51) stmt -> WHILE LPAREN . bool RPAREN instr
    (21) bool -> . bool OR comb
    (22) bool -> . comb
    (23) comb -> . comb AND igualdad
    (24) comb -> . igualdad
    (25) igualdad -> . igualdad EQ rel
    (26) igualdad -> . igualdad NE rel
    (27) igualdad -> . rel
    (28) rel -> . expr LT expr
    (29) rel -> . expr LE expr
    (30) rel -> . expr GE expr
    (31) rel -> . expr GT expr
    (32) rel -> . expr
    (33) expr -> . expr PLUS term
    (34) expr -> . expr MINUS term
    (35) expr -> . term
    (36) term -> . term TIMES unario
    (37) term -> . term DIVIDE unario
    (38) term -> . unario
    (39) unario -> . NOT unario
    (40) unario -> . MINUS unario
    (41) unario -> . factor
    (42) factor -> . LPAREN bool RPAREN
    (43) factor -> . loc
    (44) factor -> . NUM
    (45) factor -> . REAL
    (46) factor -> . TRUE
    (47) factor -> . FALSE
    (19) loc -> . loc LBRACKET bool RBRACKET
    (20) loc -> . ID

    NOT             shift and go to state 47
    MINUS           shift and go to state 45
    LPAREN          shift and go to state 49
    NUM             shift and go to state 50
    REAL            shift and go to state 51
    TRUE            shift and go to state 52
    FALSE           shift and go to state 53
    ID              shift and go to state 21

    bool                           shift and go to state 56
    comb                           shift and go to state 40
    igualdad                       shift and go to state 41
    rel                            shift and go to state 42
    expr                           shift and go to state 43
    term                           shift and go to state 44
    unario                         shift and go to state 46
    factor                         shift and go to state 48
    loc                            shift and go to state 38

state 28

    (16) instr -> DO . instr WHILE LPAREN bool RPAREN SEMICOLON
    (12) instr -> . loc EQUALS bool SEMICOLON
    (13) instr -> . IF LPAREN bool RPAREN instr
    (14) instr -> . IF LPAREN bool RPAREN instr ELSE instr
    (15) instr -> . WHILE LPAREN bool RPAREN instr
    (16) instr -> . DO instr WHILE LPAREN bool RPAREN SEMICOLON
    (17) instr -> . BREAK SEMICOLON
    (18) instr -> . bloque
    (19) loc -> . loc LBRACKET bool RBRACKET
    (20) loc -> . ID
    (2) bloque -> . LBRACE decls instrs RBRACE

    IF              shift and go to state 32
    WHILE           shift and go to state 30
    DO              shift and go to state 28
    BREAK           shift and go to state 33
    ID              shift and go to state 21
    LBRACE          shift and go to state 3

    instr                          shift and go to state 57
    loc                            shift and go to state 31
    bloque                         shift and go to state 34

state 29

    (52) stmt -> DO instr . WHILE LPAREN bool RPAREN SEMICOLON

    WHILE           shift and go to state 58


state 30

    (15) instr -> WHILE . LPAREN bool RPAREN instr

    LPAREN          shift and go to state 59


state 31

    (12) instr -> loc . EQUALS bool SEMICOLON
    (19) loc -> loc . LBRACKET bool RBRACKET

    EQUALS          shift and go to state 60
    LBRACKET        shift and go to state 25


state 32

    (13) instr -> IF . LPAREN bool RPAREN instr
    (14) instr -> IF . LPAREN bool RPAREN instr ELSE instr

    LPAREN          shift and go to state 61


state 33

    (17) instr -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 62


state 34

    (18) instr -> bloque .

    WHILE           reduce using rule 18 (instr -> bloque .)
    ELSE            reduce using rule 18 (instr -> bloque .)
    RBRACE          reduce using rule 18 (instr -> bloque .)
    IF              reduce using rule 18 (instr -> bloque .)
    DO              reduce using rule 18 (instr -> bloque .)
    BREAK           reduce using rule 18 (instr -> bloque .)
    ID              reduce using rule 18 (instr -> bloque .)
    LBRACE          reduce using rule 18 (instr -> bloque .)


state 35

    (53) stmt -> BREAK SEMICOLON .

    RBRACE          reduce using rule 53 (stmt -> BREAK SEMICOLON .)
    IF              reduce using rule 53 (stmt -> BREAK SEMICOLON .)
    WHILE           reduce using rule 53 (stmt -> BREAK SEMICOLON .)
    DO              reduce using rule 53 (stmt -> BREAK SEMICOLON .)
    BREAK           reduce using rule 53 (stmt -> BREAK SEMICOLON .)
    ID              reduce using rule 53 (stmt -> BREAK SEMICOLON .)
    LBRACE          reduce using rule 53 (stmt -> BREAK SEMICOLON .)


state 36

    (5) decl -> tipo ID SEMICOLON .

    INT             reduce using rule 5 (decl -> tipo ID SEMICOLON .)
    FLOAT           reduce using rule 5 (decl -> tipo ID SEMICOLON .)
    RBRACE          reduce using rule 5 (decl -> tipo ID SEMICOLON .)
    IF              reduce using rule 5 (decl -> tipo ID SEMICOLON .)
    WHILE           reduce using rule 5 (decl -> tipo ID SEMICOLON .)
    DO              reduce using rule 5 (decl -> tipo ID SEMICOLON .)
    BREAK           reduce using rule 5 (decl -> tipo ID SEMICOLON .)
    ID              reduce using rule 5 (decl -> tipo ID SEMICOLON .)
    LBRACE          reduce using rule 5 (decl -> tipo ID SEMICOLON .)


state 37

    (6) tipo -> tipo LBRACKET NUM . RBRACKET

    RBRACKET        shift and go to state 63


state 38

    (43) factor -> loc .
    (19) loc -> loc . LBRACKET bool RBRACKET

    TIMES           reduce using rule 43 (factor -> loc .)
    DIVIDE          reduce using rule 43 (factor -> loc .)
    LT              reduce using rule 43 (factor -> loc .)
    LE              reduce using rule 43 (factor -> loc .)
    GE              reduce using rule 43 (factor -> loc .)
    GT              reduce using rule 43 (factor -> loc .)
    PLUS            reduce using rule 43 (factor -> loc .)
    MINUS           reduce using rule 43 (factor -> loc .)
    EQ              reduce using rule 43 (factor -> loc .)
    NE              reduce using rule 43 (factor -> loc .)
    AND             reduce using rule 43 (factor -> loc .)
    SEMICOLON       reduce using rule 43 (factor -> loc .)
    OR              reduce using rule 43 (factor -> loc .)
    RBRACKET        reduce using rule 43 (factor -> loc .)
    RPAREN          reduce using rule 43 (factor -> loc .)
    LBRACKET        shift and go to state 25


state 39

    (48) stmt -> loc EQUALS bool . SEMICOLON
    (21) bool -> bool . OR comb

    SEMICOLON       shift and go to state 64
    OR              shift and go to state 65


state 40

    (22) bool -> comb .
    (23) comb -> comb . AND igualdad

    SEMICOLON       reduce using rule 22 (bool -> comb .)
    OR              reduce using rule 22 (bool -> comb .)
    RBRACKET        reduce using rule 22 (bool -> comb .)
    RPAREN          reduce using rule 22 (bool -> comb .)
    AND             shift and go to state 66


state 41

    (24) comb -> igualdad .
    (25) igualdad -> igualdad . EQ rel
    (26) igualdad -> igualdad . NE rel

    AND             reduce using rule 24 (comb -> igualdad .)
    SEMICOLON       reduce using rule 24 (comb -> igualdad .)
    OR              reduce using rule 24 (comb -> igualdad .)
    RBRACKET        reduce using rule 24 (comb -> igualdad .)
    RPAREN          reduce using rule 24 (comb -> igualdad .)
    EQ              shift and go to state 67
    NE              shift and go to state 68


state 42

    (27) igualdad -> rel .

    EQ              reduce using rule 27 (igualdad -> rel .)
    NE              reduce using rule 27 (igualdad -> rel .)
    AND             reduce using rule 27 (igualdad -> rel .)
    SEMICOLON       reduce using rule 27 (igualdad -> rel .)
    OR              reduce using rule 27 (igualdad -> rel .)
    RBRACKET        reduce using rule 27 (igualdad -> rel .)
    RPAREN          reduce using rule 27 (igualdad -> rel .)


state 43

    (28) rel -> expr . LT expr
    (29) rel -> expr . LE expr
    (30) rel -> expr . GE expr
    (31) rel -> expr . GT expr
    (32) rel -> expr .
    (33) expr -> expr . PLUS term
    (34) expr -> expr . MINUS term

    LT              shift and go to state 69
    LE              shift and go to state 70
    GE              shift and go to state 71
    GT              shift and go to state 72
    EQ              reduce using rule 32 (rel -> expr .)
    NE              reduce using rule 32 (rel -> expr .)
    AND             reduce using rule 32 (rel -> expr .)
    SEMICOLON       reduce using rule 32 (rel -> expr .)
    OR              reduce using rule 32 (rel -> expr .)
    RBRACKET        reduce using rule 32 (rel -> expr .)
    RPAREN          reduce using rule 32 (rel -> expr .)
    PLUS            shift and go to state 73
    MINUS           shift and go to state 74


state 44

    (35) expr -> term .
    (36) term -> term . TIMES unario
    (37) term -> term . DIVIDE unario

    LT              reduce using rule 35 (expr -> term .)
    LE              reduce using rule 35 (expr -> term .)
    GE              reduce using rule 35 (expr -> term .)
    GT              reduce using rule 35 (expr -> term .)
    PLUS            reduce using rule 35 (expr -> term .)
    MINUS           reduce using rule 35 (expr -> term .)
    EQ              reduce using rule 35 (expr -> term .)
    NE              reduce using rule 35 (expr -> term .)
    AND             reduce using rule 35 (expr -> term .)
    SEMICOLON       reduce using rule 35 (expr -> term .)
    OR              reduce using rule 35 (expr -> term .)
    RBRACKET        reduce using rule 35 (expr -> term .)
    RPAREN          reduce using rule 35 (expr -> term .)
    TIMES           shift and go to state 75
    DIVIDE          shift and go to state 76


state 45

    (40) unario -> MINUS . unario
    (39) unario -> . NOT unario
    (40) unario -> . MINUS unario
    (41) unario -> . factor
    (42) factor -> . LPAREN bool RPAREN
    (43) factor -> . loc
    (44) factor -> . NUM
    (45) factor -> . REAL
    (46) factor -> . TRUE
    (47) factor -> . FALSE
    (19) loc -> . loc LBRACKET bool RBRACKET
    (20) loc -> . ID

    NOT             shift and go to state 47
    MINUS           shift and go to state 45
    LPAREN          shift and go to state 49
    NUM             shift and go to state 50
    REAL            shift and go to state 51
    TRUE            shift and go to state 52
    FALSE           shift and go to state 53
    ID              shift and go to state 21
